@@ -1,4 +1,4 @@
-.\"	$NetBSD: bozohttpd.8,v 1.85 2020/10/15 02:19:23 mrg Exp $
+.\"	$NetBSD: bozohttpd.8,v 1.86 2020/10/15 04:21:53 mrg Exp $
 .\"
 .\"	$eterna: bozohttpd.8,v 1.101 2011/11/18 01:25:11 mrg Exp $
 .\"
@@ -34,14 +34,14 @@
 .Nd hyper text transfer protocol version 1.1 daemon
 .Sh SYNOPSIS
 .Nm
-.Op Fl EGHVXefhnsu
+.Op Fl EGHVXdefhnsu
 .Op Fl C Ar suffix cgihandler
 .Op Fl I Ar port
 .Op Fl L Ar prefix script
 .Op Fl M Ar suffix type encoding encoding11
 .Op Fl P Ar pidfile
 .Op Fl R Ar readme
-.Op Fl S Ar server_software
+.Op Fl S Ar version
 .Op Fl T Ar type timeout
 .Op Fl U Ar username
 .Op Fl Z Ar cert privkey
@@ -120,6 +120,14 @@ Note that the CGI/1.1 interface is available with
 translation using
 .Fl E
 switch.
+.It Fl d
+Enables debug support.
+.It Fl E
+Enables CGI/1.1 interface for
+.Em ~user
+translation.
+Note that enabling this support implies that users can run commands
+as the web server user. This may have security implications.
 .It Fl e
 Causes
 .Nm
@@ -131,9 +139,11 @@ options.
 .It Fl f
 Stops the
 .Fl b
-flag from
+flag from detaching
 .Nm
-detaching from the tty and going into the background.
+from the tty and going into the background. This implies the
+.Fl b
+flag.
 .It Fl G
 Get the
 .Nm
@@ -212,12 +222,10 @@ options may be passed.
 .It Fl n
 Stops
 .Nm
-from doing IP address to name resolution of hosts for setting the
+from doing IP address to name resolution of remote hosts.
+This affects the
 .Ev REMOTE_HOST
-variable before running a CGI program.
-This option has no effect without the
-.Fl c
-option.
+environment variable for CGI programs and Lua scripts.
 .It Fl P Ar pidfile
 Causes
 .Nm
@@ -237,9 +245,9 @@ to
 When directory indexing is enabled, include the contents of the file
 .Ar readme
 in the footer of the directory index.
-.It Fl S Ar server_software
+.It Fl S Ar version
 Sets the internal server version to
-.Ar server_software .
+.Ar version .
 .It Fl s
 Forces logging to be set to stderr always.
 .It Fl T Ar type timeout
@@ -290,12 +298,6 @@ into the directory
 (but see the
 .Fl p
 option above).
-.It Fl E
-Enables CGI/1.1 interface for
-.Em ~user
-translation.
-Note that enabling this support implies that users can run
-commands as web server user, this may have security implications.
 .It Fl V
 Sets the backup virtual host directory to the
 .Ar slashdir
@@ -330,15 +332,15 @@ Changes the default file read for directories from
 .Dq index.html
 to
 .Ar index .
-.It Fl z Ar ciphers
-Sets the list of SSL ciphers (see
-.Xr SSL_CTX_set_cipher_list 3 ) .
 .It Fl Z Ar certificate_path privatekey_path
 Sets the path to the server certificate file and the private key file
 in PEM format.
 It also causes
 .Nm
 to start SSL mode.
+.It Fl z Ar ciphers
+Sets the list of SSL ciphers (see
+.Xr SSL_CTX_set_cipher_list 3 ) .
 .El
 .Pp
 Note that in
